tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/users.rs
expression: res
---
Err(
    Custom(
        "{\"email\":[{\"code\":\"email\",\"message\":\"invalid email\"}],\"name\":[{\"code\":\"length\",\"message\":\"Name must be between 2 and 38 characters long.\"}]}",
    ),
)
