tests/models/snapshots/find_paginated@threads.snap
---
source: tests/models/threads.rs
expression: threads
---
- id: 1
  title: Startled by a seagull.
  description: I was startled by a seagull
  board_id: 1
  poster: 1
  poster_username: user1
  poster_is_banned: false
  last_active: "2023-11-12T12:34:56.789"
  num_replies: 1
