tests/models/snapshots/find_paginated_all@replies.snap
---
source: tests/models/replies.rs
expression: threads
---
- id: 1
  body: "I was runnning. A seagull startled me, and then I fell on my face."
  reply_to: ~
  thread_id: 1
  poster: 1
  poster_username: user1
  poster_is_banned: false
  updated_at: "2023-11-12T12:34:56.789Z"
  reply_status: 1
  image_url: ~
- id: 5
  body: "Oh wow. That's terrible!"
  reply_to:
    - 1
    - "I was runnning. A seagull startled me, and then I fell on my face."
    - 1
  thread_id: 1
  poster: 2
  poster_username: user2
  poster_is_banned: false
  updated_at: "2023-11-12T12:34:56.790Z"
  reply_status: 1
  image_url: ~
